Added Delete Cart Items Api Calls
Navigate to /api/docs under
Delete cart item section

P.s remember to add the table for deleted order items
